--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
       </div>
       <h3 class="card-title">Legacy Cloud CRM</h3>
       <p class="card-role">Enterprise Edition</p>
-      <button class="btn-glass" onclick="abrirPopup('https://legacycrm.netlify.app/')">
+      <button class="btn-glass" onclick="abrirPopup('https://legacysistema.github.io/legacy-crm/')">
         Acessar Sistema
       </button>
     </div>
@@ -918,7 +918,7 @@
       </div>
       <h3 class="card-title">Legacy Contracts</h3>
       <p class="card-role">Gestão de Contratos</p>
-      <button class="btn-glass" onclick="abrirPopup('https://legacycontratos.netlify.app')">
+      <button class="btn-glass" onclick="abrirPopup('https://legacysistema.github.io/legacy-contrato/')">
         Acessar Sistema
       </button>
     </div>
@@ -929,7 +929,7 @@
       </div>
       <h3 class="card-title">Legacy Forms</h3>
       <p class="card-role">Gestão de Formulários</p>
-      <button class="btn-glass" onclick="abrirPopup('https://legacyforms.netlify.app')">
+      <button class="btn-glass" onclick="abrirPopup('https://legacysistema.github.io/legacy-forms/')">
         Acessar Sistema
       </button>
     </div>
