--- a/index.html
+++ b/index.html
@@ -3148,8 +3148,8 @@ Acesse seu portal para mais detalhes: {link_portal}
               <div style="width: 80px; height: 80px; background: rgba(59, 130, 246, 0.2); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
                 <i class="fas fa-user-shield" style="font-size: 2rem; color: var(--primary);"></i>
               </div>
-              <h2 style="color: #fff; margin-bottom: 10px;">Admin Supabase</h2>
-              <p style="color: rgba(255, 255, 255, 0.7);">Autenticação segura via Supabase</p>
+              <h2 style="color: #fff; margin-bottom: 10px;">Acesso Administrador</h2>
+              <p style="color: rgba(255, 255, 255, 0.7);">Área restrita</p>
             </div>
             
             <div class="plataforma_input_group">
