--- a/index.html
+++ b/index.html
@@ -3165,7 +3165,7 @@ Acesse seu portal para mais detalhes: {link_portal}
             <div id="supabase_admin_error" style="color: #ef4444; font-size: 0.9rem; margin: 10px 0; display: none;"></div>
             
             <button class="plataforma_btn plataforma_btn_primary" style="width: 100%; margin-bottom: 15px;" onclick="supabase_admin.login()" id="supabase_login_btn">
-              <i class="fas fa-sign-in-alt"></i> Entrar com Supabase
+              <i class="fas fa-sign-in-alt"></i> Acessar Área
             </button>
             
             <button class="plataforma_btn plataforma_btn_secondary" style="width: 100%;" onclick="supabase_admin.closeModal()">
