--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
         <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-rocket"></i> Implantação guiada</li>
+          <li><i class="fas fa-rocket"></i> Escolha 1 sistema Legacy</li>
           <li><i class="fas fa-clock"></i> 3 Tickets Suporte/mês</li>
-          <li class="disabled"><i class="fas fa-ban"></i> Sem fidelidade</li>
+          <li class="disabled"><i class="fas fa-ban"></i> Acesso exclusivo</li>
         </ul>
         <button class="btn-select-plan" onclick="openPayment('SaaS Flex Mensal', 60)">Assinar Mensal</button>
       </div>
@@ -485,15 +485,15 @@
         <h3 class="plan-title">Starter</h3>
         <p class="plan-desc">O pacote inicial ideal para organizar a casa.</p>
         <div class="price-box">
-          <span class="price-value">R$150</span><span class="price-suffix">Pgto único</span>
+          <span class="price-value">R$95</span><span class="price-suffix">/mês</span>
         </div>
-        <span class="billing-note">Equivalente a R$50/mês</span>
+        <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-laptop-code"></i> Implantação Guiada</li>
+          <li><i class="fas fa-laptop-code"></i> Escolha 2 sistemas Legacy</li>
           <li><i class="fas fa-ticket-alt"></i> 5 Tickets Suporte/mês</li>
         </ul>
-        <button class="btn-select-plan" onclick="openPayment('Starter Trimestral', 150)">Assinar Trimestral</button>
+        <button class="btn-select-plan" onclick="openPayment('Starter, 95)">Assinar Trimestral</button>
       </div>
 
       <div class="price-card featured">
@@ -501,28 +501,28 @@
         <h3 class="plan-title">Manager <i class="fas fa-crown" style="color: #facc15;"></i></h3>
         <p class="plan-desc">Gestão completa e suporte estendido.</p>
         <div class="price-box">
-          <span class="price-value">R$600</span><span class="price-suffix">Pgto único</span>
+          <span class="price-value">R$150</span><span class="price-suffix">/mês</span>
         </div>
-        <span class="billing-note">Equivalente a R$50/mês</span>
+        <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
         <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-laptop-code"></i> Implantação com o usuário</li>
-          <li><i class="fas fa-ticket-alt"></i> 8 Tickets Suporte/mês</li>
+          <li><i class="fas fa-laptop-code"></i> Acesso exclusivo à plataforma Legacy</li>
+          <li><i class="fas fa-ticket-alt"></i> 5 Tickets Suporte/mês</li>
         </ul>
-        <button class="btn-select-plan" onclick="openPayment('Manager Anual', 600)">Assinar Anual</button>
+        <button class="btn-select-plan" onclick="openPayment('Manager Anual', 150)">Assinar Anual</button>
       </div>
 
       <div class="price-card">
         <h3 class="plan-title">Controller</h3>
         <p class="plan-desc">Equilíbrio perfeito entre custo e prazo.</p>
         <div class="price-box">
-          <span class="price-value">R$300</span><span class="price-suffix">Pgto único</span>
+          <span class="price-value">R$175</span><span class="price-suffix">/mês</span>
         </div>
-        <span class="billing-note">Equivalente a R$50/mês</span>
+        <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-laptop-code"></i> Implantação Guiada</li>
-          <li><i class="fas fa-ticket-alt"></i> 5 Tickets Suporte/mês</li>
+          <li><i class="fas fa-laptop-code"></i> Acesso exclusivo à plataforma Legacy</li>
+          <li><i class="fas fa-ticket-alt"></i> Suporte Contínuo Seg. a Sáb</li>
         </ul>
         <button class="btn-select-plan" onclick="openPayment('Controller Semestral', 300)">Assinar Semestral</button>
       </div>
