--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       </div>
       <h3 class="card-title">Legacy Cloud CRM</h3>
       <p class="card-role">Enterprise Edition</p>
-      <button class="btn-glass" onclick="abrirPopup('https://legacysistema;github.io/legacy-crm')">
+      <button class="btn-glass" onclick="abrirPopup('https://legacysistema.github.io/legacy-crm')">
         Acessar Sistema
       </button>
     </div>
